Working with Unittest, UI test are pending

--- a/.env
+++ b/.env
@@ -4,4 +4,6 @@ SAP_OCC_USERNAME=test_user
 SAP_OCC_PASSWORD=test_password
 
 # Model Configuration
-MODEL_NAME=llama3
+MODEL_NAME=meta-llama-3.1-8b-instruct
+LLM_BASE_URL=http://host.docker.internal:1234/v1
+EMBEDDING_MODEL=all-MiniLM-L6-v2
